# frame-batteries

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  contributing.md  license.txt  main.py  pyproject.toml  test.py
.devcontainer/: devcontainer.json
domain/models/: frame.py  lua.py
domain/repositories/: abstract.py  frame.py
frame_client/: main.lua
tests/: test_bleak_frame_repo.py
